# GPU_HeatConduction

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/10_heatSourceCPU/: cmesh.cpp  cmesh.h  cmodel.cpp  collid.cpp  obj-viewer.cpp  tmbvh.cpp  tmbvh.hpp
src/10_heatSourceGPU/: heatSource.cu
src/10_heatSourceGPU_Test/: heatSourceGPUTest.cpp
src/common/: PNGManager.cpp  PNGManager.h  complexNumber.h
src/common_teacher/: licence.h  timer.h
src/common_teacher/GL/: glut.h
